2004-09-03  MenTaLguY <mental@rydia.net>

	* src/attributes.cpp, src/attributes.h, src/sp-namedview.cpp,
	  src/sp-namedview.h:

	  remember previously selected layer on load

2004-09-02  MenTaLguY <mental@rydia.net>

	* src/attributes.cpp, src/attributes.h, src/sp-item-group.cpp:

	  reintroduced the inkscape:groupmode attribute

	* src/gc-core.h, src/gc-finalized.h, src/gc-anchored.h,
	  src/libnr/nr-object.cpp:
	  
	  remove USE_LIBGC macro again

2004-08-30  MenTaLguY <mental@rydia.net>

	* src/sp-object.cpp:

	  ref the object while SPObject::deleteObject runs, so it doesn't
	  get destroyed halfway through [ fix for bug #1012874 ]

2004-08-29  MenTaLguY <mental@rydia.net>

	* src/gc-core.h:
	
	  turn off scanning of dynamic library data segments; we don't need
	  it, and it seems to cause problems on FC2

2004-08-27  MenTaLguY <mental@rydia.net>

	* src/traits/function.h: add typedefs for all argument positions,
	  specifying 'void' for all arguments after the last

	* src/livarot/evil-malloc.h, src/livarot/BitLigne.cpp,
	  src/livarot/PathCutting.cpp, src/livarot/PathSimplify.cpp,
	  src/livarot/Shape.cpp, src/livarot/ShapeSweepUtils.cpp:

	  work around livarot bugs so I can use ElectricFence

	* src/gc-core.h, src/gc-finalized.h, src/gc-anchored.h,
	  src/libnr/nr-object.cpp:
	  
	  make the garbage collector easy to disable by undefining
	  USE_LIBGC in src/gc-core.h

2004-08-26  MenTaLguY <mental@rydia.net>

	* src/document-private.h, src/document.h, src/document.cpp:

	  add notification signal when resources are added or removed

2004-08-25  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/xml/repr-css.cpp (sp_repr_css_print):
	  Fix for shared string change.

	* src/sp-text.cpp (sp_text_description):
	  Fix for when font Name() call fails.

	* src/sp-text.cpp: CodingStyle changes, including moving some
	  declarations to first use.
	  Remove unused __SP_TEXT_C__ define.

2004-08-25  Carl Hetherington  <inkscape@carlh.net>
