@@ -1,3 +1,8 @@
+2004-09-05  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/sp-polygon.cpp (polygon_get_value): Use static linkage.
+	  (sp_polygon_set): Remove debugging output.  Add `todo' comment.
+
 2004-09-03  MenTaLguY <mental@rydia.net>
 
 	* src/attributes.cpp, src/attributes.h, src/sp-namedview.cpp,
